# kybernet

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  codecov.yml  cyrb.toml  cyrius.cyml  cyrius.toml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: history.csv  rust_compare.rs
docs/: benchmarks-rust-v-cyrius.md
docs/architecture/: overview.md
docs/audit/: 2026-05-11-audit.md
docs/development/: roadmap.md
lib/: agent.cyr  agnostik_agent.cyr  agnostik_error.cyr  agnostik_security.cyr  agnostik_types.cyr  agnosys_syscalls_linux.cyr  alloc.cyr  argonaut_audit.cyr  argonaut_boot.cyr  argonaut_compat_compat.cyr  argonaut_export.cyr  argonaut_health.cyr  argonaut_init.cyr  argonaut_process_mgmt.cyr  argonaut_retention.cyr  argonaut_services.cyr  argonaut_types.cyr  assert.cyr  audit.cyr  boot.cyr  callback.cyr  chain.cyr  entry.cyr  error.cyr  export.cyr  fnptr.cyr  hasher.cyr  health.cyr  init.cyr  io.cyr  libro_chain.cyr  libro_entry.cyr  libro_error.cyr  libro_export.cyr  libro_hasher.cyr  libro_query.cyr  libro_retention.cyr  libro_verify.cyr  process.cyr  process_mgmt.cyr  (+10 more)
lib/agnosys/: syscalls_agnos.cyr
qemu/: boot-crash-test.sh  boot-desktop-test.sh  boot-full-desktop.sh  boot-shutdown-test.sh  boot-test.sh  build-initramfs.sh
rust-old/qemu/: boot-crash-test.sh  boot-edge-test.sh  (+2 more)
scripts/: bench-compare.sh  bench-history.sh  bench.sh  build.sh  test.sh  version-bump.sh
src/: bench.cyr  console.rs  eventloop.rs  main.cyr  main.rs  mount.rs  test.cyr
supply-chain/: config.toml
(+23 files in other folders)
